--- a/MyProject/css/main.css
+++ b/MyProject/css/main.css
@@ -241,4 +241,43 @@ a {
 }
 .section__ourwork .section__ourwork-more .section__ourwork-more-arrow {
   margin-left: 1rem;
+  padding-bottom: 3rem;
+}
+
+.section__team {
+  background-color: #e2c4ba;
+}
+.section__team h3 {
+  font-size: 5rem;
+  font-weight: 200;
+  color: #533738;
+  text-align: center;
+  padding-top: 5rem;
+  margin-bottom: 4rem;
+}
+.section__team .section__team-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.section__team .section__team-container p {
+  color: #533738;
+  font-size: 1.8rem;
+  max-width: 32rem;
+  margin: 0 2rem 0 0;
+}
+.section__team .container__team-title {
+  text-align: center;
+  font-size: 4rem;
+  color: #533738;
+}
+.section__team .container__team-work {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
