--- a/MyProject/scss/main.scss
+++ b/MyProject/scss/main.scss
@@ -99,6 +99,7 @@ a {
 			padding: 1rem 6.5rem;
 			background-color: #cc8b86;
 			margin-top: 3rem;
+			cursor: pointer;
 			.main__container-link-link {
 				color: #533738;
 				&:hover {
@@ -247,10 +248,124 @@ a {
 	.container__team-title {
 		text-align: center;
 		font-size: 4rem;
+		font-weight: 200;
 		color: #533738;
 	}
 	.container__team-work {
 		display: flex;
 		justify-content: space-around;
+	}
+	.container__team-work-description {
+		font-size: 1.8rem;
+		color: #533738;
+		text-align: center;
+		min-width: 15rem;
+		margin-left: 4rem;
+		margin-bottom: 8rem;
+		&:first-child {
+			margin-left: 5rem;
+		}
+		&:last-child {
+			margin-right: 5rem;
+		}
+		.container__team-number {
+			display: block;
+			text-align: center;
+			line-height: 3rem;
+			font-size: 4rem;
+			color: #fff;
+			background-image: url(/MyProject/img/circle.png);
+			background-repeat: no-repeat;
+			background-position: 50% 50%;
+			padding: 2rem 0 2rem 0;
+			margin-bottom: 4rem;
+		}
+	}
+}
+.section__reviews {
+	background-color: #e5e5e5;
+	.section__reviews-container {
+		.section__reviews-container-title {
+			font-size: 4rem;
+			color: #533738;
+			text-align: center;
+			padding-top: 6rem;
+		}
+	}
+	.slider__item {
+		display: flex;
+		justify-content: space-between;
+		.slider__item-slide {
+			margin: auto 15%;
+			color: #533738;
+			font-size: 2.2rem;
+			max-width: 40rem;
+		}
+		.slider__item-img-img {
+			margin: 4rem 15% 6rem auto;
+			.slider__item-img {
+				margin-top: 2rem;
+			}
+		}
+	}
+}
+.section__application {
+	background-color: #8d7370;
+	display: flex;
+	.section__application-container {
+		padding-top: 5rem;
+		margin: 0 auto;
+		.section__application-container-title {
+			font-size: 4rem;
+			color: #fff;
+			margin-bottom: 3rem;
+		}
+		.section__application-container-description {
+			font-size: 1.8rem;
+			color: #ffffff;
+			opacity: 0.6;
+			margin-bottom: 6rem;
+		}
+		input {
+			height: 4rem;
+			width: 50rem;
+			font-size: 2rem;
+			margin-bottom: 4rem;
+		}
+		input::placeholder {
+			color: #fff;
+			opacity: 0.7;
+		}
+		.section__application-container-input-text {
+			background: none;
+			border: none;
+			outline: none;
+			color: #fff;
+			border-bottom: #fff;
+			border-bottom: 1px solid #fff;
+		}
+		.section__application-container-input-email {
+			background: none;
+			border: none;
+			outline: none;
+			color: #fff;
+			border-bottom: 1px solid #fff;
+		}
+		.btn {
+			padding: 1rem 6rem;
+			border: none;
+			background-color: #cc8b86;
+			color: #fff;
+			font-size: 2rem;
+			opacity: 0.7;
+			cursor: pointer;
+			&:hover {
+				transition: 1s ease;
+				padding: 2rem 10rem;
+			}
+		}
+	}
+	.section__application-maps {
+		margin-left: 2rem;
 	}
 }
