--- a/MyProject/scss/main.scss
+++ b/MyProject/scss/main.scss
@@ -36,34 +36,61 @@ ol {
 a {
 	text-decoration: none;
 }
+// переменные
+$main_color: #533738;
+$basic_color: #ffffff;
+$main_bgcolor: #cc8b86;
+$basic_bgcolor: #8d7370;
+$white_bgcolor: #e5e5e5;
+$main_fz: 1.8rem;
+$main_title: 5rem;
+$main_lh: 3rem;
+$main_title_h2: 4rem;
+// миксины
+@mixin main_number {
+	color: $basic_color;
+	font-size: 4rem;
+	line-height: $main_lh;
+}
+@mixin main_input {
+	background: none;
+	border: none;
+	outline: none;
+	color: $basic_color;
+	border-bottom: 1px solid $basic_color;
+}
+@mixin main_btn {
+	height: 2rem;
+	margin-top: 2.8rem;
+}
+// main
+
 .wrapper {
 	.navbar-brand {
 		margin-top: 1rem;
-		color: #533738;
-		font-size: 2rem;
+		color: $main_color;
+		font-size: $main_fz;
 	}
 	.nav-item {
 		margin-top: 1rem;
 		padding: 1rem 2rem;
 		&:hover {
-			background-color: #cc8b86;
+			background-color: $main_bgcolor;
 			transition: 1s ease;
 		}
 	}
 	.form-control {
-		height: 2rem;
-		margin-top: 2.8rem;
+		@include main_btn
 	}
 	.btn {
-		height: 2rem;
-		margin-top: 2.8rem;
+		@include main_btn
 	}
 	.nav-link {
-		color: #533738;
-		font-size: 1.8rem;
+		color: $main_color;
+		font-size: $main_fz;
 		&:hover {
 			transition: 1s ease;
-			color: #fff !important;
+			color: $basic_color !important;
 		}
 	}
 	background-image: url(/MyProject/img/bgmain.jpg);
@@ -73,40 +100,40 @@ a {
 		max-width: 50rem;
 		padding-bottom: 10rem;
 		&-title {
-			font-size: 5rem;
-			color: #533738;
+			font-size: $main_title;
+			color: $main_color;
 			line-height: 62px;
 		}
 		&-description {
-			line-height: 30px;
-			font-size: 1.8rem;
-			color: #533738;
+			line-height: $main_lh;
+			font-size: $main_fz;
+			color: $main_color;
 			margin-top: 2rem;
 		}
 		&-link {
 			display: inline-block;
 			font-size: 2rem;
 			padding: 1rem 6.5rem;
-			background-color: #cc8b86;
+			background-color: $main_bgcolor;
 			margin-top: 3rem;
 			cursor: pointer;
 		}
 		&-link-link {
-			color: #533738;
+			color: $main_color;
 			&:hover {
 				transition: 0.7s ease;
 				color: antiquewhite;
 			}
 		}
 	}
-}
+
 .section__about {
-	background-color: #e5e5e5;
+	background-color: $white_bgcolor;
 	.section__about-container {
 		&-title {
-			font-size: 4rem;
-			line-height: 5rem;
-			color: #533738;
+			font-size: $main_title_h2;
+			line-height: $main_title;
+			color: $main_color;
 			text-align: center;
 			padding-top: 6rem;
 			margin-bottom: 5rem;
@@ -120,9 +147,9 @@ a {
 			margin-right: 6rem;
 		}
 		&-description {
-			font-size: 1.8rem;
-			color: #533738;
-			line-height: 3ren;
+			font-size: $main_fz;
+			color: $main_color;
+			line-height: $main_lh;
 			max-width: 50rem;
 			margin: 0 auto;
 			padding-bottom: 5rem;
@@ -131,7 +158,7 @@ a {
 }
 
 .section__experience {
-	background-color: #8d7370;
+	background-color: $basic_bgcolor;
 	span {
 		display: block;
 		line-height: 6rem;
@@ -142,28 +169,23 @@ a {
 		padding: 5rem;
 		text-align: center;
 		.number {
-			font-size: 5rem;
-			color: #fff;
+			font-size: $main_title;
+			color: $basic_color;
+			line-height: $main_lh;
 		}
 		&-years {
-			color: #fff;
-			font-size: 4rem;
-			line-height: 3.2rem;
+			@include main_number
 		}
 		&-project {
-			color: #fff;
-			font-size: 4rem;
-			line-height: 3.2rem;
+			@include main_number
 		}
 		&-reward {
-			color: #fff;
-			font-size: 4rem;
-			line-height: 3.2rem;
+			@include main_number
 		}
 	}
 }
 .section__ourwork {
-	background-color: #e5e5e5;
+	background-color: $white_bgcolor;
 	.section__ourwork-container {
 		padding-left: 5%;
 		&-img {
@@ -174,11 +196,11 @@ a {
 			margin: 1rem;
 		}
 		&-title {
-			font-size: 4rem;
+			font-size: $main_title;
 			margin-left: 10rem;
 			padding-top: 4rem;
 			padding-bottom: 2rem;
-			color: #533738;
+			color: $main_color;
 		}
 		&-description {
 			display: inline-block;
@@ -186,7 +208,7 @@ a {
 		}
 
 		&-description-title {
-			color: #533738;
+			color: $main_color;
 			font-size: 3rem;
 			max-width: 25rem;
 			text-align: center;
@@ -196,8 +218,8 @@ a {
 		}
 		&-description-description {
 			position: absolute;
-			color: #533738;
-			font-size: 1.8rem;
+			color: $main_color;
+			font-size: $main_fz;
 			max-width: 30rem;
 			text-align: center;
 			top: 30%;
@@ -210,7 +232,7 @@ a {
 		justify-content: center;
 	}
 	&-more-link {
-		color: #533738;
+		color: $main_color;
 	}
 	&-more-arrow {
 		margin-left: 1rem;
@@ -220,9 +242,9 @@ a {
 .section__team {
 	background-color: #e2c4ba;
 	h3 {
-		font-size: 5rem;
+		font-size: $main_title;
 		font-weight: 200;
-		color: #533738;
+		color: $main_color;
 		text-align: center;
 		padding-top: 5rem;
 		margin-bottom: 4rem;
@@ -232,8 +254,8 @@ a {
 		justify-content: center;
 		flex-wrap: wrap;
 		p {
-			color: #533738;
-			font-size: 1.8rem;
+			color: $main_color;
+			font-size: $main_fz;
 			max-width: 32rem;
 			margin: 0 2rem 0 0;
 		}
@@ -242,15 +264,15 @@ a {
 		text-align: center;
 		font-size: 40rem;
 		font-weight: 200;
-		color: #533738;
+		color: $main_color;
 	}
 	.container__team-work {
 		display: flex;
 		justify-content: space-around;
 
 		&-description {
-			font-size: 1.8rem;
-			color: #533738;
+			font-size: $main_fz;
+			color: $main_color;
 			text-align: center;
 			min-width: 15rem;
 			margin-left: 4rem;
@@ -265,9 +287,9 @@ a {
 		&-number {
 			display: block;
 			text-align: center;
-			line-height: 3rem;
-			font-size: 4rem;
-			color: #fff;
+			line-height: $main_lh;
+			font-size: $main_title_h2;
+			color: $basic_color;
 			background-image: url(/MyProject/img/circle.png);
 			background-repeat: no-repeat;
 			background-position: 50% 50%;
@@ -277,11 +299,11 @@ a {
 	}
 }
 .section__reviews {
-	background-color: #e5e5e5;
+	background-color: $white_bgcolor;
 	.section__reviews-container {
 		&-title {
-			font-size: 4rem;
-			color: #533738;
+			font-size: $main_title_h2;
+			color: $main_color;
 			text-align: center;
 			padding-top: 6rem;
 		}
@@ -291,7 +313,7 @@ a {
 		justify-content: space-between;
 		&-slide {
 			margin: auto 15%;
-			color: #533738;
+			color: $main_color;
 			font-size: 2.2rem;
 			max-width: 40rem;
 		}
@@ -304,20 +326,20 @@ a {
 	}
 }
 .section__application {
-	background-color: #8d7370;
+	background-color: $basic_bgcolor;
 	display: flex;
 	flex-wrap: wrap;
 	&-container {
 		padding-top: 5rem;
 		margin: 0 auto;
 		&-title {
-			font-size: 4rem;
-			color: #fff;
+			font-size: $main_title_h2;
+			color: $basic_color;
 			margin-bottom: 3rem;
 		}
 		&-description {
-			font-size: 1.8rem;
-			color: #ffffff;
+			font-size: $main_fz;
+			color: $basic_color;
 			opacity: 0.6;
 			margin-bottom: 6rem;
 		}
@@ -328,29 +350,20 @@ a {
 			margin-bottom: 4rem;
 		}
 		input::placeholder {
-			color: #fff;
+			color: $basic_color;
 			opacity: 0.7;
 		}
 		&-input-text {
-			background: none;
-			border: none;
-			outline: none;
-			color: #fff;
-			border-bottom: #fff;
-			border-bottom: 1px solid #fff;
+			@include main_input
 		}
 		&-input-email {
-			background: none;
-			border: none;
-			outline: none;
-			color: #fff;
-			border-bottom: 1px solid #fff;
+			@include main_input
 		}
 		.btn {
 			padding: 1rem 6rem;
 			border: none;
-			background-color: #cc8b86;
-			color: #fff;
+			background-color: $main_bgcolor;
+			color: $basic_color;
 			font-size: 2rem;
 			opacity: 0.7;
 			cursor: pointer;
@@ -366,23 +379,23 @@ a {
 	}
 }
 footer {
-	background-color: #e5e5e5e5;
+	background-color: $white_bgcolor;
 	.footer__container {
 		display: flex;
 		justify-content: space-around;
 		padding: 2.5rem 0;
 		&-phone-link {
-			color: #533738;
-			font-size: 1.8rem;
+			color: $main_color;
+			font-size: $main_fz;
 			margin-right: 4rem;
 		}
 		&-address {
-			color: #533738;
-			font-size: 1.8rem;
+			color: $main_color;
+			font-size: $main_fz;
 		}
 		&-name {
-			color: #533738;
-			font-size: 1.8rem;
+			color: $main_color;
+			font-size: $main_fz;
 		}
 	}
 }
@@ -399,11 +412,39 @@ footer {
 	}
 }
 @media screen and (max-width: 768px) {
-	.section__ourwork-container-img {
-		max-width: 50rem;
+	.wrapper .main__container {
+		margin-left: 0;
+		padding-left: 10%;
+	}
+	.section__experience .section__experience-container .number {
+		font-size: 4rem;
+	}
+	.section__about .section__about-container-title {
+		margin-bottom: 3%;
+	}
+	.section__experience .section__experience-container-years {
+		font-size: 2.5rem;
+	}
+	.section__experience .section__experience-container-project {
+		font-size: 2.5rem;
+	}
+	.section__experience .section__experience-container-reward {
+		font-size: 2.5rem;
+	}
+	.section__experience .section__experience-container {
+		font-size: 2rem;
+	}
+	.section__ourwork-container {
+		margin: 0 auto;
+	}
+	.container__team-work-number {
+		margin: 0 auto;
 	}
 	.container__team-work {
 		flex-wrap: wrap;
+	}
+	.section__ourwork .section__ourwork-container-img {
+		max-width: 50rem;
 	}
 	.section__team .container__team-work-description:last-child {
 		margin-right: 0;
@@ -412,9 +453,58 @@ footer {
 		flex-wrap: wrap;
 	}
 	.section__about .section__about-container .section__about-container-img {
-		margin: 10%;
+		margin: 5% 20%;
 	}
 	.section__about-container-img-img {
 		max-width: 50rem;
+	}
+	.section__reviews .slider__item-slide {
+		padding-right: 15rem;
+		margin: 0;
+		font-size: 1.6rem;
+	}
+}
+@media screen and (max-width: 700px) {
+	.section__reviews {
+		display: none;
+	}
+}
+@media screen and (max-width: 580px) {
+	.section__ourwork .section__ourwork-container-img {
+		max-width: 30rem;
+	}
+	.section__ourwork .section__ourwork-container-img1 {
+		display: none;
+	}
+	.section__ourwork .section__ourwork-container-description-title {
+		display: none;
+	}
+	.section__ourwork .section__ourwork-container-description-description {
+		display: none;
+	}
+	.section__team .container__team-work-description {
+		margin-left: 2rem;
+	}
+	.section__team .container__team-work-description:first-child {
+		margin-left: 2rem;
+	}
+	.section__about .section__about-container-img-img {
+		max-width: 30rem;
+		margin: 0;
+	}
+	.section__application-container {
+		max-width: 30rem;
+	}
+	.section__application-container input {
+		max-width: 30rem;
+	}
+}
+@media screen and (max-width: 390px) {
+	.section__application .section__application-maps {
+		max-width: 30rem;
+		margin: 0 auto;
+	}
+	.section__about .section__about-container-img-img {
+		width: 20rem;
 	}
 }
